fix background clipping

--- a/src/styles/body-text.scss
+++ b/src/styles/body-text.scss
@@ -3,4 +3,5 @@
     background-color: #ffffff4f;
     padding: 20px;
     border-radius: 5px;
+    position: relative;
 }
