--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     justify-content: space-around;
+    position: relative;
     a {
         color: white;
         text-decoration: none;
