--- a/src/styles/script-generator.scss
+++ b/src/styles/script-generator.scss
@@ -17,6 +17,7 @@
             border: 1px solid gray;
             border-radius: 5px;
             padding: 5px;
+            position: relative;
         }
 
         .button {
@@ -42,6 +43,4 @@
             width: 100px;
         }
     }
-
-    
 }
